# wm

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.ba/: config.json  issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
Formula/: wm.rb
opencode-plugin/: package.json  tsconfig.json
opencode-plugin/src/: index.ts
plugin/.claude-plugin/: plugin.json
plugin/agents/: compress.md  distill.md  dive-prep.md  pause.md  review.md
plugin/commands/: compress.md  distill.md  dive-prep.md  init.md  pause.md  review.md
plugin/skills/dive-prep/: SKILL.md
src/: compile.rs  compress.rs  distill.rs  dive.rs  extract.rs  init.rs  llm.rs  main.rs  oh.rs  session.rs  show.rs  state.rs  types.rs
src/codex/: mod.rs  reader.rs  session.rs  types.rs
src/transcript/: reader.rs
