[package]
name = "wm"
version = "0.1.2"
edition = "2024"
description = "Working memory for AI coding assistants"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/wm"
keywords = ["ai", "memory", "claude", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
