[package]
name = "working-memory"
version = "0.1.4"
edition = "2024"
description = "Working memory for AI coding assistants"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/wm"
keywords = ["ai", "memory", "claude", "context"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
